--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ Dockerfile export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
 phpunit.xml.dist export-ignore
+psalm.xml export-ignore
