--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "ext-bcmath": "*",
         "php": "^7.3 || ^8.0",
-        "webmozart/assert": "*"
+        "webmozart/assert": "^1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
