--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "webmozart/assert": "^1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
